--- a/html/style/base.css
+++ b/html/style/base.css
@@ -126,7 +126,7 @@ a.image-link
 /*  Background colors														  */
 /******************************************************************************/
 
-.jspTrack,
+/* .jspTrack, */
 /* #nostalgia-tab, */
 #start-preloader ul li,
 /* #nostalgia-tab-content, */
@@ -584,9 +584,14 @@ ul.no-list
 	width:10px;
 }
 
+.jsptRACK
+{
+	background-color:#F1EFEB;
+}
+
 .jspDrag
 {
-	background-color:#FE9900;
+	background-color:#DAD3CB;
 }
 
 /******************************************************************************/
@@ -713,6 +718,18 @@ input.button
 	width:300px;
 	display:block;
 	position:absolute;
+}
+
+#calendarBox
+{
+	right:10%;
+	z-index:4;
+	top:10%;
+	width:800px;
+	/* height: 200px; */
+	display:block;
+	position:absolute;
+	/* background-color: #fff; */
 }
 
 	/**************************************************************************/
