修改日历样式

--- a/html/style/base.css
+++ b/html/style/base.css
@@ -1288,6 +1288,10 @@ input.button
 		bottom:0%;
 	}
 
+	#calendarBox{
+		display: none !important;
+	}
+
 	#nostalgia-navigation
 	{
 		bottom:37px;
